syntax = "proto3";

package greet;

option go_package = "simple_connect/services/greet";

message GreetRequest {
  string name = 1;
}

message GreetResponse {
  string greeting = 1;
}

service GreetService {
  rpc Greet (GreetRequest) returns (GreetResponse);
}
